tests/Rules/Aria/Fixtures/invalid/list_missing_items.html.twig
<div role="list">
  No items
</div>
